<resources>

    <string name="app_name">Huddle</string>

    <string name="fullname">Full name</string>

    <string name="srmemail">SRM Email</string>

    <string name="password">********</string>

    <string name="changepassword">Password</string>

    <string name="confirmpassword">Confirm Password</string>

    <string name="changeheader">Change Your Account Password</string>

    <string name="registrationnumber">Registration Number</string>

    <string name="swipelogin">SWIPE UP TO LOGIN</string>

    <string name="registerlogin">SWIPE UP TO REGISTER</string>

    <string name="icondesc">Image</string>

    <string name="searchT">Enter The Teacher\'s Name</string>

    <string name="login">LOGIN</string>

    <string name="register">REGISTER</string>

    <string name="countrycode">+91</string>

    <string name="mobilewarning">Please enter your phone number. We will send a SMS for OTP Verification. Carrier charges may apply.</string>

    <string name="submit">SUBMIT</string>

    <string name="otpsent">An OTP has been sent to</string>

    <string name="nootp">Did\'nt Get OTP? Try Again.</string>

    <string name="mobiledefault">9871495638</string>

    <string name="username">Rishabh Singh</string>

    <string name="useremail">vsagarofficial@gmail.com</string>

    <string name="forgotpassword">Forgot Password?</string>

    <string name="email">Send An Email</string>

    <string name="sms">One Time Password</string>

    <string name="call">Verification Call</string>

    <string name="actionsettings">Settings</string>

    <string name="draweropen">Open</string>

    <string name="drawerclose">Close</string>

    <string name="profile">Profile</string>

    <string name="admin">Admin Panel</string>

    <string name="photos">Teachers</string>

    <string name="image">Image</string>

    <string name="exit">Exit</string>

    <string name="goback">Go Back To Login?</string>

    <string name="connected">Connected</string>

    <string name="notconnected">No Internet Connection</string>

    <string name="generate">Generating Your Profile!</string>

    <string name="processing">One Moment, Please Be Patient.</string>

    <string name="welcome">Welcome To Huddle, </string>

    <string name="titlenews">Title</string>

    <string name="url">URL (Optional)</string>

    <string name="settings">Settings</string>

    <string name="editprofile">Edit Profile</string>

    <string name="posts">Posts :</string>

    <string name="post">Post</string>

    <string name="postsnormal">Posts</string>

    <string name="newsnormal">POST NEWS</string>

    <string name="inclass">Class :</string>

    <string name="examplenumber">Failed</string>

    <string name="exampleclass">CSE E</string>

    <string name="bioname">Sagar Vakala</string>

    <string name="biodescription">From Delhi to Chennai in a whiff :)</string>

    <string name="introoneheader">ADMIN PANEL</string>

    <string name="introonemain">Control what happens around Huddle with just a few taps.</string>

    <string name="introtwoheader">POSTS</string>

    <string name="summary">Summary</string>

    <string name="title">Title</string>

    <string name="verified">VERIFIED</string>

    <string name="updatesection">Update Section</string>

    <string name="invalidselection">Invalid Selection</string>

    <string name="sectionupdate">Please Update Your Section</string>

    <string name="sectionupdatesuccessful">Section Updated Successfully</string>

    <string name="postsloading">Posts Loading</string>

    <string name="postsloaded">Posts Loaded</string>

    <string name="postsfailed">Loading Failed</string>

    <string name="networkoverload">Network Overload. Try Again Later!</string>

    <string name="imagechooser">Select your image</string>

    <string name="introtwomain">Add, Delete or Edit the posts accrodingly. Include Texts, Pictures, Docx, PPTs and so much more!</string>

    <string name="introthreeheader">NEWS</string>

    <string name="introthreemain">Post, Delete or Post News, Happenings, Circulars, Events, Notices on our generalised News Feed!</string>

    <string name="introfourheader">USERS</string>

    <string name="introfourmain">Manage any audience across Huddle. Students, Teachers, Content Creators. Add, Delete, Block, Restrict, Provoke Privileges.</string>

    <string name="introfiveheader">NOTIFICATIONS</string>

    <string name="introfivemain">Send notifications easily, efficiently and hassle freely to any user across Huddle with our Notification Central!</string>

    <string-array name="subjects">

        <item>Select Category</item>

        <item>GENERAL</item>

        <item>NOTICE</item>

        <item>BASIC MECHANICAL ENGINEERING</item>

        <item>BASIC ELECTRICAL ENGINEERING</item>

        <item>BASIC CIVIL ENGINEERING</item>

        <item>SCILAB</item>

        <item>PHYSICS</item>

        <item>CHEMISTRY</item>

        <item>MATHEMATICS</item>

    </string-array>

    <string-array name="sections">

        <item>Select Section</item>

        <item>A</item>

        <item>B</item>

        <item>C</item>

        <item>D</item>

        <item>E</item>

    </string-array>

</resources>
