<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_face_profile_grey600_36dp"/>
        <item
            android:id="@+id/adminpanel"
            android:title="@string/admin"
            android:icon="@drawable/ic_yin_yang_grey600_36dp"/>
        <item
            android:id="@+id/photos"
            android:title="@string/photos"
            android:icon="@drawable/ic_school_grey600_36dp"/>
        <item
            android:id="@+id/settings"
            android:title="Settings"
            android:icon="@drawable/ic_settings_grey600_36dp"/>

        <item
            android:id="@+id/exit"
            android:title="Exit"
            android:icon="@drawable/ic_arrow_back_white" />

    </group>

</menu>