<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introthree">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:background="@drawable/circle"
        android:contentDescription="@string/image" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp"
        android:contentDescription="@string/image"
        android:src="@drawable/news" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="70sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introthreeheader"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:text="@string/introthreemain"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
