<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.srmvdp.huddle.Authentication.ForgotPassword">

    <LinearLayout
        android:id="@+id/registrationnumberpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialoglight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="30sp"
            android:background="@drawable/materialbutton">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/icondesc"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/registrationnumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:hint="@string/registrationnumber"
                android:inputType="text"
                android:maxLength="15"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


    <RadioGroup
        android:id="@+id/methods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonpanel"
        android:layout_below="@+id/registrationnumberpanel">

        <RadioButton
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/dialoglight"
            android:buttonTint="@color/white"
            android:drawableEnd="@drawable/email"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/sms"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/dialoglight"
            android:buttonTint="@color/white"
            android:drawableEnd="@drawable/sms"
            android:gravity="center"
            android:text="@string/sms"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/call"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/dialoglight"
            android:buttonTint="@color/white"
            android:drawableEnd="@drawable/call"
            android:gravity="center"
            android:text="@string/call"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RadioGroup>


    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10sp">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:background="@drawable/materialbutton"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
