<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.srmvdp.huddle.Authentication.ChangePassword">

    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialoglight"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:ems="2"
            android:gravity="center"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:text="@string/changeheader"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="30sp"
            android:background="@drawable/materialbutton">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/icondesc"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:hint="@string/changepassword"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginEnd="15sp"
            android:layout_marginStart="15sp"
            android:background="@drawable/materialbutton">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/icondesc"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/passwordconfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gobackcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credentials">

        <TextView
            android:id="@+id/goback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/goback"
            android:gravity="center"
            android:layout_marginTop="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10sp">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:background="@drawable/materialbutton"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
